Small fixes for Java 17 and MC 1.21.1, 1.20.4